# discord

./: README.md  cleanup.sh  command_loader.py  fetch.py  format_result.py  helper.py  keep_alive.py  main.py  pyproject.toml  react.py  requirements
DONTFUCKINGTOUCHTHIS/: RPS.py  add.py  atm.py  checkprime.py  multiply.py  one_string_args.py  pow.py  variable_args.py
commands/: INFO.md  README.md  bmi.py  bongo.py  bug.py  cat.py  crypt.py  edit.py  help.py  heyo.py  info.py  listchallenges.py  nasa.py  rank.py
compiler/: README.md  __init__.py  main.py  template.py
function/: crypt.py  nasa.py
grader/: README.md  achievement.py  code.py  format.py  format_argument.py  format_result.py  main-beta.py  main.py  run_test.py  worker.py
grader/challenge/: README_template.md  score.json
grader/challenge/add/: README.md
grader/challenge/draw/: README.md  solution.py
grader/challenge/draw/expected/: 0
grader/challenge/mountain/: README.md
grader/challenge/mountain/expected/: 0  1  2  3  4  5  6  7  8  9
grader/challenge/mountain/in/: 1  2  5  8
grader/challenge/one/: README.md
grader/challenge/prime/: README.md
grader/challenge/sumpower/: README.md
grader/challenge/sumpower/expected/: 3
grader/challenge/tri1/: README.md
grader/challenge/tri2/: README.md
grader/challenge/tri3/: README.md
grader/challenge/tri4/: README.md
grader/challenge/trinum1/: README.md
grader/challenge/windmill/: README.md
grader/testcase_gen/: code.py  main.py
stuffs/: main.py
user_src/: RPS.py  add.py  multiply.py  one_string_args.py  pow.py  variable_args.py
(+19 files in other folders)
